[package]
name = "stuffed"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
component2oci = { path = "./crates/component2oci" }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[workspace]
members = ["crates/component2oci"]

[workspace.package]
version = "0.1.0"
authors = ["david@devigned.com"]
edition = "2021"
rust-version = "1.72.0"

[workspace.dependencies]
anyhow = "1.0.75"
oci-distribution = { git = "https://github.com/devigned/oci-distribution", branch = "os-wasi" }
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
clap = { version = "4.3.11", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sha2 = "0.10.7"
hex = "0.4.3"