[package]
name = "component2oci"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
oci-distribution = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = {workspace = true }